--- a/site/src/main.scss
+++ b/site/src/main.scss
@@ -1,4 +1,37 @@
+body > header {
+    margin: 0;
+    color: #CCC;
+    background-color: #333;
+    line-height: 50px;
+    font-weight: bold;
+}
+nav ul {
+    list-style-type: none;
+}
+nav ul li { 
+    display: inline-block; 
+    height: 50px;
+    margin-right: -4px;
+    border-left: solid 1px #555;
+    border-right: solid 1px #111;
+}
+nav ul li a { color: #CCC; 
+            text-decoration: none;
+            display: inline-block;
+            margin-right: 0px;
+            margin-left: 0px;
+            text-shadow: -1px -1px #222, 1px 1px #222;
+            padding: 0 10px; 
+            height: 100%; }
+nav ul li a:hover { 
+    color: #EEE;
+    background-color: rgba(255,255,255,0.1);
+}
+#main {
+    margin: 80px auto;
+}
+
 #container {
-    margin: 0 auto;
+    margin: 80px auto;
     border: 2px solid #800;
 }
