--- a/site/src/main.scss
+++ b/site/src/main.scss
@@ -43,10 +43,10 @@ nav ul li a:hover {
     background-color: rgba(255,255,255,0.1);
 }
 #main {
-    margin: 80px auto;
+    margin: 0px auto;
 }
 
 #container {
-    margin: 80px auto;
-    border: 2px solid #800;
+    margin: 0px auto;
+    border: 2px solid #DEE; // for debug purpose only
 }
