--- a/site/css/main.css
+++ b/site/css/main.css
@@ -21,19 +21,21 @@ body > header {
 /* line 15, ../src/main.scss */
 body > footer {
   border-top: solid 2px #CCC;
+  border-bottom: solid 1px #888;
   padding: 80px;
   margin: 0;
-  background-color: #f0f0f0;
+  bottom: 0;
+  background-color: #D0D0D0;
   font-size: .9em;
   text-shadow: 1px 1px #fff;
 }
 
-/* line 23, ../src/main.scss */
+/* line 25, ../src/main.scss */
 nav ul {
   list-style-type: none;
 }
 
-/* line 26, ../src/main.scss */
+/* line 28, ../src/main.scss */
 nav ul li {
   display: inline-block;
   height: 50px;
@@ -42,7 +44,7 @@ nav ul li {
   border-right: solid 1px #111;
 }
 
-/* line 33, ../src/main.scss */
+/* line 35, ../src/main.scss */
 nav ul li a {
   color: #CCC;
   text-decoration: none;
@@ -54,19 +56,25 @@ nav ul li a {
   height: 100%;
 }
 
-/* line 41, ../src/main.scss */
+/* line 43, ../src/main.scss */
 nav ul li a:hover {
   color: #EEE;
   background-color: rgba(255, 255, 255, 0.1);
 }
 
-/* line 45, ../src/main.scss */
+/* line 47, ../src/main.scss */
 #main {
   margin: 0px auto;
 }
 
-/* line 49, ../src/main.scss */
+/* line 50, ../src/main.scss */
 #container {
   margin: 0px auto;
   border: 2px solid #DEE;
+}
+
+/* line 55, ../src/main.scss */
+h1, h2, h3, h4, h5, h6 {
+  text-shadow: -1px -1px 1px #333, 1px 1px 1px #FFF;
+  color: #888;
 }
