--- a/site/src/main.scss
+++ b/site/src/main.scss
@@ -1,8 +1,11 @@
+$default-box-shadow-h-offset : 0px;
+@import "less/framework";
+@import "compass/css3/box-shadow";
+
 body {
     background-color: #f6f6f6;
 }
 #metacontainer{
-    border-top: 2px solid #CCC;
     border-bottom: 1px solid #888;
 }
 body > header {
@@ -11,6 +14,7 @@ body > header {
     background-color: #333;
     line-height: 50px;
     font-weight: bold;
+    @include box-shadow();
 }
 body > footer {
     border-top: solid 2px #CCC;
@@ -21,6 +25,7 @@ body > footer {
     background-color: #D0D0D0;
     font-size: .9em;
     text-shadow: 1px 1px #fff;
+    @include box-shadow(#888);
 }
 nav ul {
     list-style-type: none;
@@ -49,10 +54,10 @@ nav ul li a:hover {
 }
 #container {
     margin: 0px auto;
-    border: 2px solid #DEE; // for debug purpose only
 }
 
 h1, h2, h3, h4, h5, h6 {
+    font-family: Optima, sans-serif;
     text-shadow: -1px -1px 1px #333, 1px 1px 1px #FFF;
     color: #888;
 }
