--- a/site/css/main.css
+++ b/site/css/main.css
@@ -1,18 +1,20 @@
-/* line 5, ../src/main.scss */
+@charset "UTF-8";
+/* line 19, ../src/main.scss */
 body {
-  background-color: #f6f6f6;
+  background-color: #f6f6f0;
+  font-family: 'Kreon', Palatino, Georgia, arial, serif;
 }
 
-/* line 8, ../src/main.scss */
+/* line 23, ../src/main.scss */
 #metacontainer {
   border-bottom: 1px solid #888;
 }
 
-/* line 11, ../src/main.scss */
+/* line 26, ../src/main.scss */
 body > header {
   margin: 0;
   color: #CCC;
-  background-color: #333;
+  background-color: #2c5490;
   line-height: 50px;
   font-weight: bold;
   -moz-box-shadow: #333333 0px 1px 5px 0;
@@ -21,14 +23,14 @@ body > header {
   box-shadow: #333333 0px 1px 5px 0;
 }
 
-/* line 19, ../src/main.scss */
+/* line 34, ../src/main.scss */
 body > footer {
-  border-top: solid 2px #CCC;
-  border-bottom: solid 1px #888;
+  border-top: solid 2px rgba(0, 0, 0, 0.1);
+  border-bottom: solid 1px rgba(0, 0, 0, 0.1);
   padding: 80px;
   margin: 0;
   bottom: 0;
-  background-color: #D0D0D0;
+  background-color: #bcd0ee;
   font-size: .9em;
   text-shadow: 1px 1px #fff;
   -moz-box-shadow: #888888 0px 1px 5px 0;
@@ -37,51 +39,58 @@ body > footer {
   box-shadow: #888888 0px 1px 5px 0;
 }
 
-/* line 30, ../src/main.scss */
+/* line 45, ../src/main.scss */
+nav {
+  border-bottom: solid 1px rgba(0, 0, 0, 0.1);
+}
+
+/* line 48, ../src/main.scss */
 nav ul {
   list-style-type: none;
 }
 
-/* line 33, ../src/main.scss */
+/* line 51, ../src/main.scss */
 nav ul li {
   display: inline-block;
   height: 50px;
-  margin-right: -4px;
-  border-left: solid 1px #555;
-  border-right: solid 1px #111;
+  margin-right: 0;
+  text-align: center;
+  border-left: solid 1px rgba(255, 255, 255, 0.1);
+  border-right: solid 1px rgba(0, 0, 0, 0.2);
 }
 
-/* line 40, ../src/main.scss */
+/* line 59, ../src/main.scss */
 nav ul li a {
-  color: #CCC;
+  color: rgba(255, 255, 255, 0.8);
+  display: block;
   text-decoration: none;
-  display: inline-block;
   margin-right: 0px;
   margin-left: 0px;
-  text-shadow: -1px -1px #222, 1px 1px #222;
+  text-shadow: -1px -1px rgba(0, 0, 0, 0.2), 1px 1px rgba(0, 0, 0, 0.2);
   padding: 0 10px;
   height: 100%;
 }
 
-/* line 48, ../src/main.scss */
+/* line 68, ../src/main.scss */
 nav ul li a:hover {
-  color: #EEE;
+  color: rgba(255, 255, 255, 0.8);
   background-color: rgba(255, 255, 255, 0.1);
 }
 
-/* line 52, ../src/main.scss */
+/* line 72, ../src/main.scss */
 #main {
   margin: 0px auto;
 }
 
-/* line 55, ../src/main.scss */
+/* line 75, ../src/main.scss */
 #container {
   margin: 0px auto;
 }
 
-/* line 59, ../src/main.scss */
+/* line 79, ../src/main.scss */
 h1, h2, h3, h4, h5, h6 {
-  font-family: Optima, sans-serif;
-  text-shadow: -1px -1px 1px #333, 1px 1px 1px #FFF;
-  color: #888;
+  font-family: 'Expletus Sans',Futura,sans-serif;
+  text-shadow: 0px -1px 0px #2233aa, 0px 1px 0px white;
+  font-weight: bold;
+  color: #88aadd;
 }
