--- a/site/src/main.scss
+++ b/site/src/main.scss
@@ -1,9 +1,24 @@
 $default-box-shadow-h-offset : 0px;
 @import "less/framework";
 @import "compass/css3/box-shadow";
+@import "compass/css3/font-face";
+
+// Color scheme: colorschemedesigner.com
+// 88AADD -> main
+// BCD0EE -> light-grey
+// A9C5EE -> light
+// 2C5490 -> dark
+// 7689A6 -> grey
+
+$backgroundColor: #f6f6f0;
+$higlightColor: #8AD;
+$higlightColorShadow: #23A;
+$topColor: #2C5490;
+$footerColor: #BCD0EE;
 
 body {
-    background-color: #f6f6f6;
+    background-color: $backgroundColor;
+    font-family: 'Kreon', Palatino, Georgia, arial, serif;
 }
 #metacontainer{
     border-bottom: 1px solid #888;
@@ -11,21 +26,24 @@ body {
 body > header {
     margin: 0;
     color: #CCC;
-    background-color: #333;
+    background-color: $topColor;
     line-height: 50px;
     font-weight: bold;
     @include box-shadow();
 }
 body > footer {
-    border-top: solid 2px #CCC;
-    border-bottom: solid 1px #888;
+    border-top: solid 2px rgba(0,0,0,0.1);
+    border-bottom: solid 1px rgba(0,0,0,0.1);
     padding: 80px;
     margin: 0;
     bottom: 0;
-    background-color: #D0D0D0;
+    background-color: $footerColor;
     font-size: .9em;
     text-shadow: 1px 1px #fff;
     @include box-shadow(#888);
+}
+nav {
+    border-bottom: solid 1px rgba(0,0,0,0.1);
 }
 nav ul {
     list-style-type: none;
@@ -33,20 +51,22 @@ nav ul {
 nav ul li { 
     display: inline-block; 
     height: 50px;
-    margin-right: -4px;
-    border-left: solid 1px #555;
-    border-right: solid 1px #111;
+    margin-right: 0;
+    text-align: center;
+    border-left: solid 1px rgba(255,255,255,0.1);
+    border-right: solid 1px rgba(0,0,0,0.2);
 }
-nav ul li a { color: #CCC; 
+nav ul li a { color: rgba(255,255,255,0.8); 
+            display: block;
             text-decoration: none;
-            display: inline-block;
             margin-right: 0px;
             margin-left: 0px;
-            text-shadow: -1px -1px #222, 1px 1px #222;
+            text-shadow: -1px -1px rgba(0,0,0,0.2), 1px 1px rgba(0,0,0,0.2);
             padding: 0 10px; 
-            height: 100%; }
+            height: 100%; 
+            }
 nav ul li a:hover { 
-    color: #EEE;
+    color: rgba(255,255,255,0.8);
     background-color: rgba(255,255,255,0.1);
 }
 #main {
@@ -57,7 +77,8 @@ nav ul li a:hover {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: Optima, sans-serif;
-    text-shadow: -1px -1px 1px #333, 1px 1px 1px #FFF;
-    color: #888;
+    font-family: 'Expletus Sans',Futura,sans-serif;
+    text-shadow: 0px -1px 0px $higlightColorShadow, 0px 1px 0px #FFF;
+    font-weight: bold;
+    color: $higlightColor;
 }
