--- a/site/css/main.css
+++ b/site/css/main.css
@@ -1,16 +1,28 @@
 @charset "UTF-8";
-/* line 19, ../src/main.scss */
+/* line 26, ../src/main.scss */
 body {
   background-color: #f6f6f0;
   font-family: 'Kreon', Palatino, Georgia, arial, serif;
 }
 
-/* line 23, ../src/main.scss */
+/* line 31, ../src/main.scss */
+a {
+  color: #7689a6;
+  border: none;
+  text-decoration: none;
+}
+
+/* line 36, ../src/main.scss */
+a:hover {
+  color: #88aadd;
+}
+
+/* line 40, ../src/main.scss */
 #metacontainer {
   border-bottom: 1px solid #888;
 }
 
-/* line 26, ../src/main.scss */
+/* line 43, ../src/main.scss */
 body > header {
   margin: 0;
   color: #CCC;
@@ -23,7 +35,7 @@ body > header {
   box-shadow: #333333 0px 1px 5px 0;
 }
 
-/* line 34, ../src/main.scss */
+/* line 51, ../src/main.scss */
 body > footer {
   border-top: solid 2px rgba(0, 0, 0, 0.1);
   border-bottom: solid 1px rgba(0, 0, 0, 0.1);
@@ -39,17 +51,17 @@ body > footer {
   box-shadow: #888888 0px 1px 5px 0;
 }
 
-/* line 45, ../src/main.scss */
+/* line 62, ../src/main.scss */
 nav {
   border-bottom: solid 1px rgba(0, 0, 0, 0.1);
 }
 
-/* line 48, ../src/main.scss */
+/* line 65, ../src/main.scss */
 nav ul {
   list-style-type: none;
 }
 
-/* line 51, ../src/main.scss */
+/* line 68, ../src/main.scss */
 nav ul li {
   display: inline-block;
   height: 50px;
@@ -59,11 +71,10 @@ nav ul li {
   border-right: solid 1px rgba(0, 0, 0, 0.2);
 }
 
-/* line 59, ../src/main.scss */
+/* line 76, ../src/main.scss */
 nav ul li a {
   color: rgba(255, 255, 255, 0.8);
   display: block;
-  text-decoration: none;
   margin-right: 0px;
   margin-left: 0px;
   text-shadow: -1px -1px rgba(0, 0, 0, 0.2), 1px 1px rgba(0, 0, 0, 0.2);
@@ -71,23 +82,23 @@ nav ul li a {
   height: 100%;
 }
 
-/* line 68, ../src/main.scss */
+/* line 84, ../src/main.scss */
 nav ul li a:hover {
   color: rgba(255, 255, 255, 0.8);
   background-color: rgba(255, 255, 255, 0.1);
 }
 
-/* line 72, ../src/main.scss */
+/* line 88, ../src/main.scss */
 #main {
   margin: 0px auto;
 }
 
-/* line 75, ../src/main.scss */
+/* line 91, ../src/main.scss */
 #container {
   margin: 0px auto;
 }
 
-/* line 79, ../src/main.scss */
+/* line 95, ../src/main.scss */
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Expletus Sans',Futura,sans-serif;
   text-shadow: 0px -1px 0px #2233aa, 0px 1px 0px white;
