--- a/site/css/main.css
+++ b/site/css/main.css
@@ -1,28 +1,28 @@
 @charset "UTF-8";
-/* line 26, ../src/main.scss */
+/* line 33, ../src/main.scss */
 body {
   background-color: #f6f6f0;
   font-family: 'Kreon', Palatino, Georgia, arial, serif;
 }
 
-/* line 31, ../src/main.scss */
+/* line 38, ../src/main.scss */
 a {
   color: #7689a6;
   border: none;
   text-decoration: none;
 }
 
-/* line 36, ../src/main.scss */
+/* line 43, ../src/main.scss */
 a:hover {
-  color: #88aadd;
+  color: #ee6666;
 }
 
-/* line 40, ../src/main.scss */
+/* line 47, ../src/main.scss */
 #metacontainer {
   border-bottom: 1px solid #888;
 }
 
-/* line 43, ../src/main.scss */
+/* line 50, ../src/main.scss */
 body > header {
   margin: 0;
   color: #CCC;
@@ -35,7 +35,7 @@ body > header {
   box-shadow: #333333 0px 1px 5px 0;
 }
 
-/* line 51, ../src/main.scss */
+/* line 58, ../src/main.scss */
 body > footer {
   border-top: solid 2px rgba(0, 0, 0, 0.1);
   border-bottom: solid 1px rgba(0, 0, 0, 0.1);
@@ -51,57 +51,103 @@ body > footer {
   box-shadow: #888888 0px 1px 5px 0;
 }
 
-/* line 62, ../src/main.scss */
+/* line 72, ../src/main.scss */
 nav {
   border-bottom: solid 1px rgba(0, 0, 0, 0.1);
 }
 
-/* line 65, ../src/main.scss */
+/* line 75, ../src/main.scss */
 nav ul {
   list-style-type: none;
 }
 
-/* line 68, ../src/main.scss */
+/* line 78, ../src/main.scss */
 nav ul li {
   display: inline-block;
   height: 50px;
   margin-right: 0;
+  width: 6em;
   text-align: center;
   border-left: solid 1px rgba(255, 255, 255, 0.1);
   border-right: solid 1px rgba(0, 0, 0, 0.2);
 }
 
-/* line 76, ../src/main.scss */
-nav ul li a {
-  color: rgba(255, 255, 255, 0.8);
+/* line 87, ../src/main.scss */
+nav ul li * {
   display: block;
   margin-right: 0px;
   margin-left: 0px;
-  text-shadow: -1px -1px rgba(0, 0, 0, 0.2), 1px 1px rgba(0, 0, 0, 0.2);
   padding: 0 10px;
   height: 100%;
+  text-shadow: -1px -1px rgba(0, 0, 0, 0.2), 1px 1px rgba(0, 0, 0, 0.2);
 }
 
-/* line 84, ../src/main.scss */
+/* line 95, ../src/main.scss */
+nav ul li span.active {
+  background-color: #002233;
+}
+
+/* line 98, ../src/main.scss */
+nav ul li a {
+  color: rgba(255, 255, 255, 0.8);
+}
+
+/* line 101, ../src/main.scss */
 nav ul li a:hover {
   color: rgba(255, 255, 255, 0.8);
   background-color: rgba(255, 255, 255, 0.1);
 }
 
-/* line 88, ../src/main.scss */
+/* line 106, ../src/main.scss */
+header #choixrss, header #choixlang {
+  display: block;
+  margin-right: 0px;
+  margin-left: 0px;
+  height: 100%;
+  text-shadow: -1px -1px rgba(0, 0, 0, 0.2), 1px 1px rgba(0, 0, 0, 0.2);
+  float: right;
+  height: 50px;
+  text-align: center;
+  border-left: solid 1px rgba(255, 255, 255, 0.1);
+  border-right: solid 1px rgba(0, 0, 0, 0.2);
+}
+
+/* line 118, ../src/main.scss */
+header #choixrss a, header #choixlang a {
+  color: #bcd0ee;
+  display: block;
+  height: 100%;
+  width: 6em;
+  padding: 0 10px 0 10px;
+  text-align: center;
+}
+
+/* line 126, ../src/main.scss */
+header #choixrss a:hover, header #choixlang a:hover {
+  color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+/* line 131, ../src/main.scss */
 #main {
   margin: 0px auto;
 }
 
-/* line 91, ../src/main.scss */
+/* line 134, ../src/main.scss */
 #container {
   margin: 0px auto;
 }
 
-/* line 95, ../src/main.scss */
+/* line 138, ../src/main.scss */
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Expletus Sans',Futura,sans-serif;
   text-shadow: 0px -1px 0px #2233aa, 0px 1px 0px white;
   font-weight: bold;
   color: #88aadd;
+  margin: 48px 0;
+}
+
+/* line 147, ../src/main.scss */
+h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover {
+  text-shadow: 0px -1px 0px #441111, 0px 1px 0px white;
 }
