--- a/site/src/main.scss
+++ b/site/src/main.scss
@@ -17,11 +17,18 @@ $dark     : #2C5490;
 $darkGrey : #7689A6;
 
 $backgroundColor: #f6f6f0;
+$hoverColor: #E66;
+$hoverColorShadow: #411;
 $higlightColor: #8AD;
 $higlightColorShadow: #23A;
+$selectedBlockColor: #023;
 $topColor: #2C5490;
 $footerColor: #BCD0EE;
 $linkColor: $darkGrey;
+
+// Height
+
+$navHeight: 50px;
 
 body {
     background-color: $backgroundColor;
@@ -34,7 +41,7 @@ a {
     text-decoration: none;
 }
 a:hover {
-    color: $higlightColor;
+    color: $hoverColor;
 }
 
 #metacontainer{
@@ -44,7 +51,7 @@ body > header {
     margin: 0;
     color: #CCC;
     background-color: $topColor;
-    line-height: 50px;
+    line-height: $navHeight;
     font-weight: bold;
     @include box-shadow();
 }
@@ -59,6 +66,9 @@ body > footer {
     text-shadow: 1px 1px #fff;
     @include box-shadow(#888);
 }
+
+$menuItemWidth: 6em;
+
 nav {
     border-bottom: solid 1px rgba(0,0,0,0.1);
 }
@@ -67,24 +77,57 @@ nav ul {
 }
 nav ul li { 
     display: inline-block; 
-    height: 50px;
+    height: $navHeight;
     margin-right: 0;
+    width: $menuItemWidth;
     text-align: center;
     border-left: solid 1px rgba(255,255,255,0.1);
     border-right: solid 1px rgba(0,0,0,0.2);
 }
-nav ul li a { color: rgba(255,255,255,0.8); 
-            display: block;
-            margin-right: 0px;
-            margin-left: 0px;
-            text-shadow: -1px -1px rgba(0,0,0,0.2), 1px 1px rgba(0,0,0,0.2);
-            padding: 0 10px; 
-            height: 100%; 
-            }
+nav ul li * {
+    display: block;
+    margin-right: 0px;
+    margin-left: 0px;
+    padding: 0 10px; 
+    height: 100%; 
+    text-shadow: -1px -1px rgba(0,0,0,0.2), 1px 1px rgba(0,0,0,0.2);
+}
+nav ul li span.active {
+    background-color: $selectedBlockColor;
+}
+nav ul li a { 
+    color: rgba(255,255,255,0.8); 
+}
 nav ul li a:hover { 
     color: rgba(255,255,255,0.8);
     background-color: rgba(255,255,255,0.1);
 }
+
+header #choixrss, header #choixlang {
+    display: block;
+    margin-right: 0px;
+    margin-left: 0px;
+    height: 100%; 
+    text-shadow: -1px -1px rgba(0,0,0,0.2), 1px 1px rgba(0,0,0,0.2);
+    float: right;
+    height: $navHeight;
+    text-align: center;
+    border-left: solid 1px rgba(255,255,255,0.1);
+    border-right: solid 1px rgba(0,0,0,0.2);
+}
+header #choixrss a, header #choixlang a {
+    color: $lightGrey;
+    display: block;
+    height: 100%;
+    width: $menuItemWidth;
+    padding: 0 10px 0 10px;
+    text-align: center;
+}
+header #choixrss a:hover, header #choixlang a:hover {
+    color: rgba(255,255,255,0.8);
+    background-color: rgba(255,255,255,0.1);
+}
+
 #main {
     margin: 0px auto;
 }
@@ -97,4 +140,11 @@ h1, h2, h3, h4, h5, h6 {
     text-shadow: 0px -1px 0px $higlightColorShadow, 0px 1px 0px #FFF;
     font-weight: bold;
     color: $higlightColor;
+    margin: 48px 0;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    a:hover {
+        text-shadow: 0px -1px 0px $hoverColorShadow, 0px 1px 0px #FFF;
+    }
 }
