Corrected some HTML bugs, works without article

--- a/layouts/main.html
+++ b/layouts/main.html
@@ -58,7 +58,7 @@
     <div id="container">
 
       <div id="main" role="main">
-        <hgoup>
+        <hgroup>
           <h1><%= @item[:content_for_title].nil? ? @item[:title] : @item[:content_for_title] %></h1>
           <% unless @item[:subtitle].nil? and @item[:content_for_subtitle].nil? %> 
           <h2>
