--- a/content/html/en/blog.erb
+++ b/content/html/en/blog.erb
@@ -32,28 +32,23 @@ Last <%= number_of_articles %> Articles
 </div>
 
 <% last_articles.each do |a| %>
-<h1> 
+<article>
     <%= calendar_for( a[:created_at], language ) %> 
-    <%= link_to(a[:title]+%{ <span class="nicer">»</span>}, a) %> 
-</h1>
+    <h1> <%= link_to(a[:title]+%{ <span class="nicer">»</span>}, a) %> </h1>
 
-<div class="corps">
-
-    <% 
-        puts "%%%"
-        puts excerptize( a.reps[0].compiled_content, {:length => number_of_char_for_resume}) 
-        puts "%%%"
-    %>
-    <%= repair_html ( excerptize( a.reps[0].compiled_content, {:length => number_of_char_for_resume} ) ) %>
-
-    <div class="flush"></div>
-    <div>
-            <p>
-        <%= link_to(%{Read more <span class="nicer">»</span>}, a) %>
-            </p>
+    <div class="content">
+        <%= repair_html ( excerptize( a.reps[0].compiled_content, {:length => number_of_char_for_resume} ) ) %>
+    
+        <div class="flush"></div>
+        <div>
+                <p>
+            <%= link_to(%{Read more <span class="nicer">»</span>}, a) %>
+                </p>
+        </div>
+    
     </div>
-
-</div>
+</article>
+<hr/>
 <% end %>
 
 <div class="corps">
