--- a/site/css/main.css
+++ b/site/css/main.css
@@ -50,18 +50,22 @@ body > footer {
   -o-box-shadow: #888888 0px 1px 5px 0;
   box-shadow: #888888 0px 1px 5px 0;
 }
+/* line 68, ../src/main.scss */
+body > footer a {
+  color: #2c5490;
+}
 
-/* line 72, ../src/main.scss */
+/* line 75, ../src/main.scss */
 nav {
   border-bottom: solid 1px rgba(0, 0, 0, 0.1);
 }
 
-/* line 75, ../src/main.scss */
+/* line 78, ../src/main.scss */
 nav ul {
   list-style-type: none;
 }
 
-/* line 78, ../src/main.scss */
+/* line 81, ../src/main.scss */
 nav ul li {
   display: inline-block;
   height: 50px;
@@ -72,7 +76,7 @@ nav ul li {
   border-right: solid 1px rgba(0, 0, 0, 0.2);
 }
 
-/* line 87, ../src/main.scss */
+/* line 90, ../src/main.scss */
 nav ul li * {
   display: block;
   margin-right: 0px;
@@ -82,23 +86,23 @@ nav ul li * {
   text-shadow: -1px -1px rgba(0, 0, 0, 0.2), 1px 1px rgba(0, 0, 0, 0.2);
 }
 
-/* line 95, ../src/main.scss */
+/* line 98, ../src/main.scss */
 nav ul li span.active {
   background-color: #002233;
 }
 
-/* line 98, ../src/main.scss */
+/* line 101, ../src/main.scss */
 nav ul li a {
   color: rgba(255, 255, 255, 0.8);
 }
 
-/* line 101, ../src/main.scss */
+/* line 104, ../src/main.scss */
 nav ul li a:hover {
   color: rgba(255, 255, 255, 0.8);
   background-color: rgba(255, 255, 255, 0.1);
 }
 
-/* line 106, ../src/main.scss */
+/* line 109, ../src/main.scss */
 header #choixrss, header #choixlang {
   display: block;
   margin-right: 0px;
@@ -112,7 +116,7 @@ header #choixrss, header #choixlang {
   border-right: solid 1px rgba(0, 0, 0, 0.2);
 }
 
-/* line 118, ../src/main.scss */
+/* line 121, ../src/main.scss */
 header #choixrss a, header #choixlang a {
   color: #bcd0ee;
   display: block;
@@ -122,23 +126,23 @@ header #choixrss a, header #choixlang a {
   text-align: center;
 }
 
-/* line 126, ../src/main.scss */
+/* line 129, ../src/main.scss */
 header #choixrss a:hover, header #choixlang a:hover {
   color: rgba(255, 255, 255, 0.8);
   background-color: rgba(255, 255, 255, 0.1);
 }
 
-/* line 131, ../src/main.scss */
+/* line 134, ../src/main.scss */
 #main {
   margin: 0px auto;
 }
 
-/* line 134, ../src/main.scss */
+/* line 137, ../src/main.scss */
 #container {
   margin: 0px auto;
 }
 
-/* line 138, ../src/main.scss */
+/* line 141, ../src/main.scss */
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Expletus Sans',Futura,sans-serif;
   text-shadow: 0px -1px 0px #2233aa, 0px 1px 0px white;
@@ -147,7 +151,33 @@ h1, h2, h3, h4, h5, h6 {
   margin: 48px 0;
 }
 
-/* line 147, ../src/main.scss */
+/* line 149, ../src/main.scss */
+h1, h2, h3, h4, h5, h6 {
+  text-align: center;
+}
+/* line 151, ../src/main.scss */
 h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover {
   text-shadow: 0px -1px 0px #441111, 0px 1px 0px white;
+}
+
+/* line 156, ../src/main.scss */
+article article .date {
+  float: right;
+}
+/* line 157, ../src/main.scss */
+article article h1, article article h2, article article h3, article article h4, article article h5, article article h6 {
+  text-align: left;
+  font-size: 25px;
+  line-height: 30px;
+  margin: 0;
+}
+
+/* line 166, ../src/main.scss */
+.intro {
+  margin-bottom: 24px;
+}
+
+/* line 169, ../src/main.scss */
+.sc {
+  font-variant: small-caps;
 }
