--- a/site/src/main.scss
+++ b/site/src/main.scss
@@ -65,6 +65,9 @@ body > footer {
     font-size: .9em;
     text-shadow: 1px 1px #fff;
     @include box-shadow(#888);
+    a {
+        color: $dark;
+    }
 }
 
 $menuItemWidth: 6em;
@@ -144,7 +147,25 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1, h2, h3, h4, h5, h6 {
+    text-align: center;
     a:hover {
         text-shadow: 0px -1px 0px $hoverColorShadow, 0px 1px 0px #FFF;
     }
+}
+article article {
+    .date { float: right; }
+    h1, h2, h3, h4, h5, h6 {
+        text-align: left;
+        font-size: 25px;
+        line-height: 30px;
+        margin: 0;
+
+    }
+}
+
+.intro {
+    margin-bottom: 24px;
+}
+.sc {
+  font-variant: small-caps;
 }
