Small updates of content

--- a/content/html/fr/about.erb
+++ b/content/html/fr/about.erb
@@ -1,7 +1,8 @@
 ---
-title: Bienvenue
+title: À propos
 noSubMenu: true
 no_entete: true
+menupriority: 3
 ---
 <% content_for :title do %>
 <span style="font-weight: normal; margin-top: 0; line-height: 1ex">
