--- a/layouts/main.html
+++ b/layouts/main.html
@@ -105,6 +105,7 @@
   <!-- scripts concatenated and minified via ant build script-->
   <script src="/js/plugins.js"></script>
   <script src="/js/script.js"></script>
+  <%= @item[:content_for_js] %>
   <!-- end scripts-->
 
 
