--- a/multi/about.erb
+++ b/multi/about.erb
@@ -1,8 +1,9 @@
 ---
-en: title: YPassword
-fr: title: Bienvenue
+en: title: About
+fr: title: À propos
 noSubMenu: true
 no_entete: true
+menupriority: 3
 ---
 <% content_for :title do %>
 <span style="font-weight: normal; margin-top: 0; line-height: 1ex">
