--- a/site/src/main.scss
+++ b/site/src/main.scss
@@ -1,6 +1,7 @@
 $default-box-shadow-h-offset : 0px;
 @import "less/framework";
 @import "compass/css3/box-shadow";
+@import "compass/css3/border-radius";
 @import "compass/css3/font-face";
 
 // Color scheme: colorschemedesigner.com
@@ -20,8 +21,8 @@ $backgroundColor: #f6f6f0;
 $hoverColor: #E66;
 $hoverColorShadow: #411;
 $higlightColor: #8AD;
-$higlightColorShadow: #23A;
-$selectedBlockColor: #023;
+$higlightColorShadow: #236;
+$selectedBlockColor: rgba(0,0,0,.1);
 $topColor: #2C5490;
 $footerColor: #BCD0EE;
 $linkColor: $darkGrey;
@@ -32,7 +33,7 @@ $navHeight: 50px;
 
 body {
     background-color: $backgroundColor;
-    font-family: 'Kreon', Palatino, Georgia, arial, serif;
+    font-family: Georgia, 'Kreon', serif;
 }
 
 a {
@@ -70,7 +71,15 @@ body > footer {
     }
 }
 
-$menuItemWidth: 6em;
+article > footer  {
+    color: $mainColor;
+    margin: 48px 0;
+    ul {
+        list-style-type: none;
+    }
+}
+
+$menuItemWidth: 8em;
 
 nav {
     border-bottom: solid 1px rgba(0,0,0,0.1);
@@ -168,4 +177,32 @@ article article {
 }
 .sc {
   font-variant: small-caps;
+}
+
+.block {
+    @include column(3,false);
+}
+.block.right {
+    @include column(3,true);
+    float: right;
+}
+.left {
+    float: left;
+}
+.flush {
+    clear: both;
+}
+.slideshow {
+    @include border-radius(5px);
+    border-top: $higlightColorShadow 1px solid;
+    border-bottom: #FFF 1px solid;
+    color: #fafafa;
+    width: 80%;
+    padding: 48px;
+    margin: 48px 0;
+    background: $higlightColor;
+}
+
+.corps {
+    margin: 48px 0;
 }
