Many design ameliorations

--- a/content/html/en/blog.erb
+++ b/content/html/en/blog.erb
@@ -4,6 +4,17 @@ title: Blog
 menupriority: 2
 noSubMenu: true
 -----
+<% content_for :js do %>
+<script type="text/javascript">
+            $(document).ready( function(){$('.list').hide();$('#tagcloud a').removeAttr("href")} );
+            function tagSelected(id) {
+                $('.list').hide();
+                $('#'+id).fadeIn();
+                $('.tag.selected').removeClass('selected');
+                $('#tag_'+id).addClass('selected');
+            }
+</script>
+<% end %>
 <% 
     number_of_articles=5
     number_of_char_for_resume=800
@@ -29,8 +40,6 @@ end
 Last <%= number_of_articles %> Articles
 </h2>
 
-</div>
-
 <% last_articles.each do |a| %>
 <article>
     <%= calendar_for( a[:created_at], language ) %> 
@@ -42,7 +51,7 @@ Last <%= number_of_articles %> Articles
         <div class="flush"></div>
         <div>
                 <p>
-            <%= link_to(%{Read more <span class="nicer">»</span>}, a) %>
+            <%= link_to(%{Read more <span class="nicer">»</span>}, a, :class => "small") %>
                 </p>
         </div>
     
@@ -52,9 +61,10 @@ Last <%= number_of_articles %> Articles
 <% end %>
 
 <div class="corps">
-<div>
-<%= tagCloud %>
-</div>
+    <h2>Tag Cloud</h2>
+    <div>
+    <%= tagCloud %>
+    </div>
 </div>
 
 <h2 id="archives">Archives</h2>
