--- a/site/css/main.css
+++ b/site/css/main.css
@@ -1,81 +1,93 @@
-@charset "UTF-8";
-/* line 34, ../src/main.scss */
-body {
-  background-color: #f6f6f0;
-  font-family: Georgia, 'Kreon', serif;
+/* line 36, ../src/main.scss */
+* {
+  -moz-transition-property: all;
+  -webkit-transition-property: all;
+  -o-transition-property: all;
+  transition-property: all;
+  -moz-transition-duration: 0.5s;
+  -webkit-transition-duration: 0.5s;
+  -o-transition-duration: 0.5s;
+  transition-duration: 0.5s;
 }
 
-/* line 39, ../src/main.scss */
+/* line 41, ../src/main.scss */
+body {
+  background: #dddde0;
+  font-family: Georgia, 'Kreon', serif;
+  font-size: 1.2em;
+}
+
+/* line 47, ../src/main.scss */
 a {
   color: #7689a6;
   border: none;
   text-decoration: none;
 }
 
-/* line 44, ../src/main.scss */
+/* line 52, ../src/main.scss */
 a:hover {
   color: #ee6666;
 }
 
-/* line 48, ../src/main.scss */
+/* line 56, ../src/main.scss */
 #metacontainer {
   border-bottom: 1px solid #888;
 }
 
-/* line 51, ../src/main.scss */
+/* line 59, ../src/main.scss */
 body > header {
   margin: 0;
   color: #CCC;
   background-color: #2c5490;
   line-height: 50px;
   font-weight: bold;
-  -moz-box-shadow: #333333 0px 1px 5px 0;
-  -webkit-box-shadow: #333333 0px 1px 5px 0;
-  -o-box-shadow: #333333 0px 1px 5px 0;
-  box-shadow: #333333 0px 1px 5px 0;
+  -moz-box-shadow: 0px 0px 5px #333333;
+  -webkit-box-shadow: 0px 0px 5px #333333;
+  -o-box-shadow: 0px 0px 5px #333333;
+  box-shadow: 0px 0px 5px #333333;
 }
 
-/* line 59, ../src/main.scss */
+/* line 67, ../src/main.scss */
 body > footer {
-  border-top: solid 2px rgba(0, 0, 0, 0.1);
+  border-top: solid 1px rgba(0, 0, 0, 0.1);
   border-bottom: solid 1px rgba(0, 0, 0, 0.1);
   padding: 80px;
   margin: 0;
   bottom: 0;
   background-color: #bcd0ee;
   font-size: .9em;
-  text-shadow: 1px 1px #fff;
-  -moz-box-shadow: #888888 0px 1px 5px 0;
-  -webkit-box-shadow: #888888 0px 1px 5px 0;
-  -o-box-shadow: #888888 0px 1px 5px 0;
-  box-shadow: #888888 0px 1px 5px 0;
+  text-shadow: 1px 1px white;
+  -moz-box-shadow: rgba(0, 0, 0, 0.2) 0 0 7px inset;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 0 7px inset;
+  -o-box-shadow: rgba(0, 0, 0, 0.2) 0 0 7px inset;
+  box-shadow: rgba(0, 0, 0, 0.2) 0 0 7px inset;
 }
-/* line 69, ../src/main.scss */
+/* line 77, ../src/main.scss */
 body > footer a {
   color: #2c5490;
 }
 
-/* line 74, ../src/main.scss */
+/* line 82, ../src/main.scss */
 article > footer {
   color: #88aadd;
   margin: 48px 0;
 }
-/* line 77, ../src/main.scss */
+/* line 85, ../src/main.scss */
 article > footer ul {
   list-style-type: none;
 }
 
-/* line 84, ../src/main.scss */
+/* line 92, ../src/main.scss */
 nav {
   border-bottom: solid 1px rgba(0, 0, 0, 0.1);
 }
 
-/* line 87, ../src/main.scss */
+/* line 95, ../src/main.scss */
 nav ul {
   list-style-type: none;
 }
 
-/* line 90, ../src/main.scss */
+/* line 98, ../src/main.scss */
 nav ul li {
   display: inline-block;
   height: 50px;
@@ -86,7 +98,7 @@ nav ul li {
   border-right: solid 1px rgba(0, 0, 0, 0.2);
 }
 
-/* line 99, ../src/main.scss */
+/* line 107, ../src/main.scss */
 nav ul li * {
   display: block;
   margin-right: 0px;
@@ -96,23 +108,23 @@ nav ul li * {
   text-shadow: -1px -1px rgba(0, 0, 0, 0.2), 1px 1px rgba(0, 0, 0, 0.2);
 }
 
-/* line 107, ../src/main.scss */
+/* line 115, ../src/main.scss */
 nav ul li span.active {
   background-color: rgba(0, 0, 0, 0.1);
 }
 
-/* line 110, ../src/main.scss */
+/* line 118, ../src/main.scss */
 nav ul li a {
   color: rgba(255, 255, 255, 0.8);
 }
 
-/* line 113, ../src/main.scss */
+/* line 121, ../src/main.scss */
 nav ul li a:hover {
   color: rgba(255, 255, 255, 0.8);
   background-color: rgba(255, 255, 255, 0.1);
 }
 
-/* line 118, ../src/main.scss */
+/* line 126, ../src/main.scss */
 header #choixrss, header #choixlang {
   display: block;
   margin-right: 0px;
@@ -126,7 +138,7 @@ header #choixrss, header #choixlang {
   border-right: solid 1px rgba(0, 0, 0, 0.2);
 }
 
-/* line 130, ../src/main.scss */
+/* line 138, ../src/main.scss */
 header #choixrss a, header #choixlang a {
   color: #bcd0ee;
   display: block;
@@ -136,23 +148,23 @@ header #choixrss a, header #choixlang a {
   text-align: center;
 }
 
-/* line 138, ../src/main.scss */
+/* line 146, ../src/main.scss */
 header #choixrss a:hover, header #choixlang a:hover {
   color: rgba(255, 255, 255, 0.8);
   background-color: rgba(255, 255, 255, 0.1);
 }
 
-/* line 143, ../src/main.scss */
+/* line 151, ../src/main.scss */
 #main {
   margin: 0px auto;
 }
 
-/* line 146, ../src/main.scss */
+/* line 154, ../src/main.scss */
 #container {
   margin: 0px auto;
 }
 
-/* line 150, ../src/main.scss */
+/* line 158, ../src/main.scss */
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Expletus Sans',Futura,sans-serif;
   text-shadow: 0px -1px 0px #223366, 0px 1px 0px white;
@@ -161,20 +173,28 @@ h1, h2, h3, h4, h5, h6 {
   margin: 48px 0;
 }
 
-/* line 158, ../src/main.scss */
+/* line 166, ../src/main.scss */
+nav ul li a:hover, #choixlang a:hover, #choixrss a:hover {
+  -moz-box-shadow: #333377 0 0 8px inset;
+  -webkit-box-shadow: #333377 0 0 8px inset;
+  -o-box-shadow: #333377 0 0 8px inset;
+  box-shadow: #333377 0 0 8px inset;
+}
+
+/* line 171, ../src/main.scss */
 h1, h2, h3, h4, h5, h6 {
   text-align: center;
 }
-/* line 160, ../src/main.scss */
+/* line 173, ../src/main.scss */
 h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover {
   text-shadow: 0px -1px 0px #441111, 0px 1px 0px white;
 }
 
-/* line 165, ../src/main.scss */
+/* line 178, ../src/main.scss */
 article article .date {
   float: right;
 }
-/* line 166, ../src/main.scss */
+/* line 179, ../src/main.scss */
 article article h1, article article h2, article article h3, article article h4, article article h5, article article h6 {
   text-align: left;
   font-size: 25px;
@@ -182,39 +202,39 @@ article article h1, article article h2, article article h3, article article h4, 
   margin: 0;
 }
 
-/* line 175, ../src/main.scss */
+/* line 188, ../src/main.scss */
 .intro {
   margin-bottom: 24px;
 }
 
-/* line 178, ../src/main.scss */
+/* line 191, ../src/main.scss */
 .sc {
   font-variant: small-caps;
 }
 
-/* line 182, ../src/main.scss */
+/* line 195, ../src/main.scss */
 .block {
   width: 252px;
   margin-right: 24px;
 }
 
-/* line 185, ../src/main.scss */
+/* line 198, ../src/main.scss */
 .block.right {
   width: 252px;
   float: right;
 }
 
-/* line 189, ../src/main.scss */
+/* line 202, ../src/main.scss */
 .left {
   float: left;
 }
 
-/* line 192, ../src/main.scss */
+/* line 205, ../src/main.scss */
 .flush {
   clear: both;
 }
 
-/* line 195, ../src/main.scss */
+/* line 208, ../src/main.scss */
 .slideshow {
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
@@ -222,8 +242,12 @@ article article h1, article article h2, article article h3, article article h4, 
   -ms-border-radius: 5px;
   -khtml-border-radius: 5px;
   border-radius: 5px;
-  border-top: #223366 1px solid;
-  border-bottom: #FFF 1px solid;
+  -moz-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.3) 0 0 5px inset;
+  -webkit-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.3) 0 0 5px inset;
+  -o-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.3) 0 0 5px inset;
+  box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.3) 0 0 5px inset;
+  text-shadow: 0 0 3px black;
+  font-weight: bold;
   color: #fafafa;
   width: 80%;
   padding: 48px;
@@ -231,8 +255,77 @@ article article h1, article article h2, article article h3, article article h4, 
   background: #88aadd;
 }
 
-/* line 206, ../src/main.scss */
+/* line 220, ../src/main.scss */
 .corps {
   margin: 48px 0;
   line-height: 32px;
+}
+
+/* line 225, ../src/main.scss */
+.date {
+  font-size: 0.8em;
+  border: 1px solid #7689a6;
+  text-align: center;
+  width: 4.1em;
+  line-height: 1.5em;
+  display: inline-block;
+  vertical-align: middle;
+  margin-right: 1em;
+}
+
+/* line 236, ../src/main.scss */
+.date .day, .date .month, .date .year {
+  display: block;
+}
+
+/* line 240, ../src/main.scss */
+.date .day {
+  float: left;
+  width: 1.7em;
+  background: #a9c5ee;
+  color: #2c5490;
+}
+
+/* line 247, ../src/main.scss */
+.date .month {
+  float: right;
+  width: 2.3em;
+  color: #a9c5ee;
+  background: #2c5490;
+  border-left: 1px solid #88aadd;
+}
+
+/* line 255, ../src/main.scss */
+.date .year {
+  line-height: 3ex;
+  clear: both;
+  background: #223366;
+  color: #88aadd;
+  border-top: 1px solid #223366;
+}
+
+/* line 263, ../src/main.scss */
+.archive {
+  background-color: rgba(0, 0, 0, 0.02);
+  -moz-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
+  -webkit-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
+  -o-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
+  box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -o-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -khtml-border-radius: 5px;
+  border-radius: 5px;
+  padding: 2em;
+}
+
+/* line 269, ../src/main.scss */
+.tag {
+  cursor: pointer;
+}
+
+/* line 272, ../src/main.scss */
+.nicer {
+  font-family: "Lucida Grande", Tahoma;
 }
