--- a/site/css/main.css
+++ b/site/css/main.css
@@ -1,4 +1,4 @@
-/* line 36, ../src/main.scss */
+/* line 37, ../src/main.scss */
 * {
   -moz-transition-property: all;
   -webkit-transition-property: all;
@@ -10,31 +10,31 @@
   transition-duration: 0.5s;
 }
 
-/* line 41, ../src/main.scss */
+/* line 42, ../src/main.scss */
 body {
   background: #dddde0;
   font-family: Georgia, 'Kreon', serif;
   font-size: 1.2em;
 }
 
-/* line 47, ../src/main.scss */
+/* line 48, ../src/main.scss */
 a {
   color: #7689a6;
   border: none;
   text-decoration: none;
 }
 
-/* line 52, ../src/main.scss */
+/* line 53, ../src/main.scss */
 a:hover {
   color: #ee6666;
 }
 
-/* line 56, ../src/main.scss */
+/* line 57, ../src/main.scss */
 #metacontainer {
   border-bottom: 1px solid #888;
 }
 
-/* line 59, ../src/main.scss */
+/* line 60, ../src/main.scss */
 body > header {
   margin: 0;
   color: #CCC;
@@ -47,7 +47,7 @@ body > header {
   box-shadow: 0px 0px 5px #333333;
 }
 
-/* line 67, ../src/main.scss */
+/* line 68, ../src/main.scss */
 body > footer {
   border-top: solid 1px rgba(0, 0, 0, 0.1);
   border-bottom: solid 1px rgba(0, 0, 0, 0.1);
@@ -62,32 +62,32 @@ body > footer {
   -o-box-shadow: rgba(0, 0, 0, 0.2) 0 0 7px inset;
   box-shadow: rgba(0, 0, 0, 0.2) 0 0 7px inset;
 }
-/* line 77, ../src/main.scss */
+/* line 78, ../src/main.scss */
 body > footer a {
   color: #2c5490;
 }
 
-/* line 82, ../src/main.scss */
+/* line 83, ../src/main.scss */
 article > footer {
   color: #88aadd;
   margin: 48px 0;
 }
-/* line 85, ../src/main.scss */
+/* line 86, ../src/main.scss */
 article > footer ul {
   list-style-type: none;
 }
 
-/* line 92, ../src/main.scss */
+/* line 93, ../src/main.scss */
 nav {
   border-bottom: solid 1px rgba(0, 0, 0, 0.1);
 }
 
-/* line 95, ../src/main.scss */
+/* line 96, ../src/main.scss */
 nav ul {
   list-style-type: none;
 }
 
-/* line 98, ../src/main.scss */
+/* line 99, ../src/main.scss */
 nav ul li {
   display: inline-block;
   height: 50px;
@@ -98,7 +98,7 @@ nav ul li {
   border-right: solid 1px rgba(0, 0, 0, 0.2);
 }
 
-/* line 107, ../src/main.scss */
+/* line 108, ../src/main.scss */
 nav ul li * {
   display: block;
   margin-right: 0px;
@@ -108,23 +108,23 @@ nav ul li * {
   text-shadow: -1px -1px rgba(0, 0, 0, 0.2), 1px 1px rgba(0, 0, 0, 0.2);
 }
 
-/* line 115, ../src/main.scss */
+/* line 116, ../src/main.scss */
 nav ul li span.active {
   background-color: rgba(0, 0, 0, 0.1);
 }
 
-/* line 118, ../src/main.scss */
+/* line 119, ../src/main.scss */
 nav ul li a {
   color: rgba(255, 255, 255, 0.8);
 }
 
-/* line 121, ../src/main.scss */
+/* line 122, ../src/main.scss */
 nav ul li a:hover {
   color: rgba(255, 255, 255, 0.8);
   background-color: rgba(255, 255, 255, 0.1);
 }
 
-/* line 126, ../src/main.scss */
+/* line 127, ../src/main.scss */
 header #choixrss, header #choixlang {
   display: block;
   margin-right: 0px;
@@ -138,7 +138,7 @@ header #choixrss, header #choixlang {
   border-right: solid 1px rgba(0, 0, 0, 0.2);
 }
 
-/* line 138, ../src/main.scss */
+/* line 139, ../src/main.scss */
 header #choixrss a, header #choixlang a {
   color: #bcd0ee;
   display: block;
@@ -148,32 +148,32 @@ header #choixrss a, header #choixlang a {
   text-align: center;
 }
 
-/* line 146, ../src/main.scss */
+/* line 147, ../src/main.scss */
 header #choixrss a:hover, header #choixlang a:hover {
   color: rgba(255, 255, 255, 0.8);
   background-color: rgba(255, 255, 255, 0.1);
 }
 
-/* line 151, ../src/main.scss */
+/* line 152, ../src/main.scss */
 #main {
   margin: 0px auto;
 }
 
-/* line 154, ../src/main.scss */
+/* line 155, ../src/main.scss */
 #container {
   margin: 0px auto;
 }
 
-/* line 158, ../src/main.scss */
+/* line 159, ../src/main.scss */
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Expletus Sans',Futura,sans-serif;
   text-shadow: 0px -1px 0px #223366, 0px 1px 0px white;
   font-weight: bold;
-  color: #88aadd;
+  color: #7689a6;
   margin: 48px 0;
 }
 
-/* line 166, ../src/main.scss */
+/* line 167, ../src/main.scss */
 nav ul li a:hover, #choixlang a:hover, #choixrss a:hover {
   -moz-box-shadow: #333377 0 0 8px inset;
   -webkit-box-shadow: #333377 0 0 8px inset;
@@ -181,20 +181,20 @@ nav ul li a:hover, #choixlang a:hover, #choixrss a:hover {
   box-shadow: #333377 0 0 8px inset;
 }
 
-/* line 171, ../src/main.scss */
+/* line 172, ../src/main.scss */
 h1, h2, h3, h4, h5, h6 {
   text-align: center;
 }
-/* line 173, ../src/main.scss */
+/* line 174, ../src/main.scss */
 h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover {
   text-shadow: 0px -1px 0px #441111, 0px 1px 0px white;
 }
 
-/* line 178, ../src/main.scss */
+/* line 179, ../src/main.scss */
 article article .date {
   float: right;
 }
-/* line 179, ../src/main.scss */
+/* line 180, ../src/main.scss */
 article article h1, article article h2, article article h3, article article h4, article article h5, article article h6 {
   text-align: left;
   font-size: 25px;
@@ -202,39 +202,39 @@ article article h1, article article h2, article article h3, article article h4, 
   margin: 0;
 }
 
-/* line 188, ../src/main.scss */
+/* line 189, ../src/main.scss */
 .intro {
   margin-bottom: 24px;
 }
 
-/* line 191, ../src/main.scss */
+/* line 192, ../src/main.scss */
 .sc {
   font-variant: small-caps;
 }
 
-/* line 195, ../src/main.scss */
+/* line 196, ../src/main.scss */
 .block {
   width: 252px;
   margin-right: 24px;
 }
 
-/* line 198, ../src/main.scss */
+/* line 199, ../src/main.scss */
 .block.right {
   width: 252px;
   float: right;
 }
 
-/* line 202, ../src/main.scss */
+/* line 203, ../src/main.scss */
 .left {
   float: left;
 }
 
-/* line 205, ../src/main.scss */
+/* line 206, ../src/main.scss */
 .flush {
   clear: both;
 }
 
-/* line 208, ../src/main.scss */
+/* line 209, ../src/main.scss */
 .slideshow {
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
@@ -255,13 +255,13 @@ article article h1, article article h2, article article h3, article article h4, 
   background: #88aadd;
 }
 
-/* line 220, ../src/main.scss */
+/* line 221, ../src/main.scss */
 .corps {
   margin: 48px 0;
   line-height: 32px;
 }
 
-/* line 225, ../src/main.scss */
+/* line 226, ../src/main.scss */
 .date {
   font-size: 0.8em;
   border: 1px solid #7689a6;
@@ -273,12 +273,12 @@ article article h1, article article h2, article article h3, article article h4, 
   margin-right: 1em;
 }
 
-/* line 236, ../src/main.scss */
+/* line 237, ../src/main.scss */
 .date .day, .date .month, .date .year {
   display: block;
 }
 
-/* line 240, ../src/main.scss */
+/* line 241, ../src/main.scss */
 .date .day {
   float: left;
   width: 1.7em;
@@ -286,7 +286,7 @@ article article h1, article article h2, article article h3, article article h4, 
   color: #2c5490;
 }
 
-/* line 247, ../src/main.scss */
+/* line 248, ../src/main.scss */
 .date .month {
   float: right;
   width: 2.3em;
@@ -295,7 +295,7 @@ article article h1, article article h2, article article h3, article article h4, 
   border-left: 1px solid #88aadd;
 }
 
-/* line 255, ../src/main.scss */
+/* line 256, ../src/main.scss */
 .date .year {
   line-height: 3ex;
   clear: both;
@@ -304,7 +304,7 @@ article article h1, article article h2, article article h3, article article h4, 
   border-top: 1px solid #223366;
 }
 
-/* line 263, ../src/main.scss */
+/* line 264, ../src/main.scss */
 .archive {
   background-color: rgba(0, 0, 0, 0.02);
   -moz-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
@@ -320,12 +320,67 @@ article article h1, article article h2, article article h3, article article h4, 
   padding: 2em;
 }
 
-/* line 269, ../src/main.scss */
+/* line 270, ../src/main.scss */
 .tag {
   cursor: pointer;
 }
 
-/* line 272, ../src/main.scss */
+/* line 273, ../src/main.scss */
 .nicer {
   font-family: "Lucida Grande", Tahoma;
+}
+
+/* line 277, ../src/main.scss */
+#elementblock ul {
+  list-style-type: none;
+}
+/* line 279, ../src/main.scss */
+#elementblock ul li {
+  display: inline-block;
+  width: 252px;
+  margin-right: 24px;
+}
+/* line 282, ../src/main.scss */
+#elementblock ul li a {
+  float: left;
+  background-color: rgba(0, 0, 0, 0.02);
+  -moz-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
+  -webkit-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
+  -o-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
+  box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -o-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -khtml-border-radius: 5px;
+  border-radius: 5px;
+  padding: 1em;
+  text-align: center;
+  width: 80%;
+}
+/* line 291, ../src/main.scss */
+#elementblock ul li a:hover {
+  background-color: rgba(0, 0, 0, 0.05);
+}
+
+/* line 297, ../src/main.scss */
+.return {
+  background-color: rgba(0, 0, 0, 0.02);
+  -moz-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
+  -webkit-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
+  -o-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
+  box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -o-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -khtml-border-radius: 5px;
+  border-radius: 5px;
+  padding: .4em .3em .05em;
+  text-align: center;
+}
+
+/* line 304, ../src/main.scss */
+.return:hover {
+  background-color: rgba(0, 0, 0, 0.05);
 }
